--- a/Physic-Game.html
+++ b/Physic-Game.html
@@ -2,13 +2,94 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <title>Physic Game</title>
+
+
+    <div class="header">
+        <div class="row">
+            <h1> <strong>The Physic Game!</strong></h1>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <h3>Guess what letter I'm thinking of...</h3>
+        </div>
+        <div class="row">
+            <div class="col-md-12, info">
+                Wins:
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="populate" id="winCount">
+                    0
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12, info">
+                Losses:
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="populate" id="lossCount">
+                    0
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12, info">
+                Guesses Remaining:
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="populate" id="guessesRemaining">
+                    10
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12, info">
+                Your Guesses:
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="populate" id="guessedLetters">
+                    guesses..
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <script src="assets/javascript/javascript.js">
+    </script>
+
+
+
+
+
+
+
+
 
 <body>
+
 
 </body>
 
