--- a/Physic-Game.html
+++ b/Physic-Game.html
@@ -3,7 +3,8 @@
 
 <head>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <title>Physic Game</title>
@@ -11,13 +12,13 @@
 
     <div class="header">
         <div class="row">
-            <h1> <strong>The Physic Game!</strong></h1>
+            <h1> <strong> The Physic Game!</strong></h1>
         </div>
     </div>
 
     <div class="container">
         <div class="row">
-            <h3>Guess what letter I'm thinking of...</h3>
+            <h3> What letter am I thinking of? </h3>
         </div>
         <div class="row">
             <div class="col-md-12, info">
@@ -56,7 +57,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="populate" id="guessesRemaining">
-                    10
+                    15
                 </div>
             </div>
         </div>
@@ -70,7 +71,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="populate" id="guessedLetters">
-                    guesses..
+                    Your guesses:
                 </div>
             </div>
         </div>
